# OptEval-Server

./: CMakeLists.txt  README.md
plugins/: plugin_sphere.cpp
src/: main.cpp  plugin.hpp  problem.hpp  server.cpp  server.hpp
